# proto

./: .gitignore  README.md  WORKSPACE  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: cd-publish-package.yml  ci-build.yml  ci-protolint.yml  ci-test.yml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
protos/: build.gradle.kts
protos/src/main/proto/com/apexnova/services/sample/: sample.proto
protos/src/main/proto/io/grpc/examples/helloworld/: BUILD.bazel
src/main/proto/com/apexnova/service/identity/: auth.proto
src/main/proto/com/apexnova/service/identity/grpc/: auth.proto  user.proto
src/main/proto/com/apexnova/service/post/: post.proto
src/main/proto/com/apexnova/service/post/grpc/: post.proto
src/main/proto/com/apexnova/service/sample/: sample.proto
src/main/proto/com/apexnova/services/comment/: comment.proto
src/main/proto/com/apexnova/services/identity/: auth.proto  user.proto
src/main/proto/com/apexnova/services/post/: comment.proto  post.proto
src/main/proto/com/apexnova/services/sample/: BUILD.bazel  sample.proto
src/main/proto/io/grpc/examples/animals/: dog.proto
stub/: build.gradle.kts
stub-android/: build.gradle.kts
