load("@rules_proto//proto:defs.bzl", "proto_library")
load("//:kt_jvm_grpc.bzl", "kt_jvm_grpc_library", "kt_jvm_proto_library")

licenses(["notice"])

package(default_visibility = ["//examples:__subpackages__"])

proto_library(
    name = "sample_proto",
    srcs = ["sample.proto"],
)

java_lite_proto_library(
    name = "sample_java_proto_lite",
    deps = [":sample_proto"],
)

kt_jvm_proto_library(
    name = "sample_kt_proto",
    deps = [":sample_proto"],
)

kt_jvm_grpc_library(
    name = "sample_kt_grpc",
    srcs = [":sample_proto"],
    deps = [":sample_kt_proto"],
)

kt_jvm_grpc_library(
    name = "sample_kt_grpc_lite",
    srcs = [":sample_proto"],
    flavor = "lite",
    deps = [":sample_java_proto_lite"],
)
